package sk.uniza.fri.sklad;

/**
 * Interface ktory implementuju triedy ktore je mozne identifikovat s ID.
 * @author Juraj
 */
public interface IIdentifikovatelny {
    /**
     * Vracia ID objektu ktory implementuje interface
     * @return id
     */
    String getId();
}
