@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
class Main {
--
+{static}main(args: String[]): void
}
interface IIdentifikovatelny{
--
+getId(): String
}

class Sklad{
-zoznamMiestnosti: HashMap<String, Miestnost>
-zoznamPracovnikov: HashMap<String, Pracovnik>
-riaditelSkladu: Riaditel
--
+{static}new(): Sklad
+vypisUvodneMenu(): void
+getZoznamMiestnosti(): HashMap<String,Miestnost>
+getZoznamPracovnikov(): HashMap<String,Pracovnik>
+getRiaditelSkladu(): Riaditel
+ulozZmeny(): void
}

class VytvaracTovaru {
-dialog: JDialog
-hlavnyPanel: JPanel
-id: JTextField
-nazov: JTextField
-vaha: JTextField
-priezvisko: JTextField
-meno: JTextField
-ulozButton: JButton
-zatvorButton: JButton
-zoznamMiestnosti: HashMap<String, Miestnost>
-zakaznik: Zakaznik
-oknoZatvorene: boolean
--
+{static}new(zoznamMiestnosti: HashMap<String,Miestnost>, zakaznik: Zakaznik): VytvaracTovaru
+vytvorTovar(): Tovar
}

interface ISkladovaMiestnost{
--
+getRegal(): Regal
+vypisZoznamuRegalov(): String
}

abstract class Miestnost{
-popisMiestnosti: String
-zoznamPracovnikov: HashMap<String, Pracovnik>
--
+{static}new(popisMiestnosti: String): Miestnost
+getPopisMiestnosti(): String
+vypisZoznamuPracovnikov(): String
+pridajPracovnika(pracovnik: Pracovnik): void
+odoberPracovnika pracovnik: Pracovnik): void
}

class MalySklad extends Miestnost implements ISkladovaMiestnost{
-regal: Regal
--
+{static}new(popisMiestnosti: String): MalySklad
+getRegal(): Regal
+vypisZoznamuRegalov(): String
}

class VelkySklad extends Miestnost implements ISkladovaMiestnost{
-zoznamRegalov: ArrayList<Regal>
--
+{static}new(popisMiestnosti: String): VelkySklad
+getRegal(): Regal
+getRegal(index: int): Regal
+vypisZoznamuRegalov(): String
+pridajRegal(kapacita: int): void
+odstranRegal(index: int): void
+getZoznamRegalov(): ArrayList<Regal>
}

abstract class Osoba {
-meno: String
-priezvisko: String
--
+{static}new(meno: String, priezvisko: String): Osoba
+getMeno(): String
+getPriezvisko(): String
+toString(): String
}

class Pracovnik extends Osoba implements IIdentifikovatelny{
-zoznamMiestnosti: HashMap<String, Miestnost>
-id: String
-aktualnaMiestnost: Miestnost
-aktualnyTovar: Tovar
--
+{static}new(meno: String, priezvisko: String, zoznamMiestnosti: HashMap<String, Miestnost>, id: String): Pracovnik
+getId(): String
+getAktualnaMiestnost(): Miestnost
+mamTovar(): boolean
+chodDoMiestnosti(miestnost: String): void
+zoberTovar(id: String): void
+zoberTovar(id: String, indexRegalu: int): void
+ulozTovar(): boolean
+vypisMojTovar(): void
+vypisZoznamRegalovAktualnejMiestnosti(): void
+toString(): String
}

class Riaditel extends Osoba implements IIdentifikovatelny{
-zoznamPracovnikov: HashMap<String, Pracovnik>
-zoznamMiestnosti: HashMap<String, Miestnost>
-id: String
--
+{static}new(meno: String, priezvisko: String, zoznamMiestnosti: HashMap<String, Miestnost>,zoznamPracovnikov: HashMap<String, Pracovnik>, id: String): Riaditel
+getId(): String
+getZoznamPracovnikov(): HashMap<String, Pracovnik>
+vypisZoznamPracovnikov(): void
+vypisTovar(): void
+pridajRegal(cislo: int): void
+odstranRegal(index: int): void
+prijmiPracovnika(pracovnik: Pracovnik): void
+vylucPracovnika(id: String): void
}

class Zakaznik extends Osoba{
-prijemTovaru: MalySklad
-vydajTovaru: MalySklad
--
+{static}new(meno: String, priezvisko: String, prijemTovaru: MalySklad, vydajTovaru: MalySklad): Zakaznik
+ulozTovar(tovar: Tovar): void
+vyzdvihniTovar(tovar: Tovar): void
}

class CitacSuboru {
--
+{static}new(): CitacSuboru
+nacitaj(): Sklad
}

class ZapisovacSuboru {
--
+{static}new(): ZapisovacSuboru
+zapis(sklad: Sklad): void
}

class Regal {
-zoznamTovaru: Tovar[]
--
+{static}new(kapacita: int): Regal
+getZoznamTovaru(): Tovar[]
+getTovar(id: String): Tovar
+ulozTovar(tovar: Tovar): void
+odoberTovar(id: String): void
+maVolneMiesto(): boolean
+jePrazdny(): boolean
+toString: String
}

class Tovar implements IIdentifikovatelny{
-id: String
-nazovTovaru: String
-vaha: int
-odosielatel: Zakaznik
-prijemca: Zakaznik
--
+{static}new(id: String, nazovTovaru: String, vaha: int, odosielatel: Zakaznik, prijemca: Zakaznik): Tovar
+getPrijemca(): Zakaznik
+getId(): String
+toString: String
}

interface ITerminal {
+nacitajVstup(): String
+spustiTerminal(): void
+zatvorTerminal(): void
+vypisUvodneMenu(): void
}

class TerminalPracovnika implements ITerminal{
-sklad: Sklad
-aktualnyPracovnik: Pracovnik
-scanner: Scanner
-pocetPokusov: int
--
+{static}new(sklad: Sklad): TerminalPracovnika
+nacitajVstup(): String
+spustiTerminal(): void
+zatvorTerminal(): void
+vypisUvodneMenu(): void
}

class TerminalRiaditela implements ITerminal{
-sklad: Sklad
-scanner: Scanner
-riaditel: Riaditel
-pocetPokusov: int
--
+{static}new(sklad: Sklad): TerminalRiaditela
+nacitajVstup(): String
+spustiTerminal(): void
+zatvorTerminal(): void
+vypisUvodneMenu(): void
}

class TerminalZakaznika implements ITerminal{
-sklad: Sklad
-scanner: Scanner
-zakaznik: Zakaznik
--
+{static}new(sklad: Sklad): TerminalZakaznika
+nacitajVstup(): String
+spustiTerminal(): void
+zatvorTerminal(): void
+vypisUvodneMenu(): void
}

CitacSuboru --* Main

Osoba --* Sklad
Miestnost --* Sklad
ZapisovacSuboru --* Sklad
TerminalZakaznika --* Sklad
TerminalRiaditela --* Sklad
TerminalPracovnika --* Sklad

Zakaznik --> VytvaracTovaru
Tovar --* VytvaracTovaru

VytvaracTovaru --* TerminalZakaznika
Sklad --> ZapisovacSuboru

Pracovnik --> Miestnost

Regal --* MalySklad

Regal --* VelkySklad

Sklad --* CitacSuboru

Tovar --* Regal





@enduml